# wookie

./: .dockerignore  Cargo.toml  README.md  SPEC.md  book.toml  compose.docs.yml
.github/workflows/: ci.yml
deploy/docs/: Dockerfile  nginx.conf
docs/: README.md  SUMMARY.md  agent-coordination.md  audit-and-ci.md  configuration.md  getting-started.md  inbox-triage.md  notifications.md  protocols.md  publishing.md  retrieval.md  rules-and-findings.md  self-hosting.md  session-maintenance.md  sessions.md  storage-and-concurrency.md
docs/theme/: wookie.css
src/: audit.rs  commands.rs  config.rs  git_paths.rs  history.rs  main.rs  mcp.rs  page.rs  plugins.rs  protocol.rs  publish.rs  report.rs  retrieval.rs  retrieval_index.rs  sessions.rs  settings.rs  snapshot.rs  wiki.rs
templates/: guidance.md
tests/: cli.rs  hardening.rs
