[package]
name = "wookie"
version = "0.1.0"
edition = "2021"
description = "LLM-first wiki manager: one binary that owns the conventions so agents never guess"
license = "MIT"

[dependencies]
anyhow = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
walkdir = "2"

[profile.release]
strip = true
